--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.4"
   },
